add: file map/dict
