# backend/openapi.json
@@ -643,6 +643,57 @@
         }
       }
     },
+    "/chats/{chat_id}/files": {
+      "get": {
+        "tags": [
+          "chats"
+        ],
+        "summary": "Get Chat File Map",
+        "operationId": "get_chat_file_map_chats__chat_id__files_get",
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "chat_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Chat Id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "type": "string"
+                  },
+                  "title": "Response Get Chat File Map Chats  Chat Id  Files Get"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/health": {
       "get": {
         "tags": [
@@ -711,6 +762,13 @@
             "type": "string",
             "format": "date-time",
             "title": "Updated At"
+          },
+          "file_map": {
+            "additionalProperties": {
+              "type": "string"
+            },
+            "type": "object",
+            "title": "File Map"
           }
         },
         "type": "object",
